infrastructure/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meridian-bank
  labels:
    app.kubernetes.io/part-of: meridian-bank
