infrastructure/kubernetes/21-customer-kyc-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-kyc-service
  namespace: meridian-bank
spec:
  replicas: 1
  selector:
    matchLabels: { app: customer-kyc-service }
  template:
    metadata:
      labels: { app: customer-kyc-service }
    spec:
      containers:
        - name: customer-kyc-service
          image: meridianbank-customer-kyc-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          startupProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            periodSeconds: 10
            failureThreshold: 90
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8082 }
            initialDelaySeconds: 5
            periodSeconds: 15
            failureThreshold: 12
          resources:
            requests: { cpu: "100m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "768Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: customer-kyc-service
  namespace: meridian-bank
spec:
  selector: { app: customer-kyc-service }
  ports:
    - port: 8082
      targetPort: 8082
